# federated-learning-visualization

./: .gitignore  Cargo.toml  README.md  federated_learning_viz_v2.py  requirements.txt
dashboard/: app.py  simulate_workers.py
src/: coordinator.rs  main.rs  model.rs  worker.rs
